# Civora

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  civora.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: backup.yml  build-images.yml  ci.yml  deploy-staging.yml
apps/ai/: package.json  pyproject.toml  run_dev.sh  run_test.sh
apps/ai/app/: main.py
apps/ai/app/scoring/: __init__.py  biens_scoring.py  contacts_scoring.py
apps/ai/tests/: test_biens_scoring.py  test_health.py
apps/ai/tests/scoring/: test_contacts_scoring.py
apps/api/: .eslintrc.json  eslint.config.mjs  package.json  tsconfig.json  vitest.config.mts
apps/api/prisma/: schema.prisma  (+1 more)
apps/web/: next.config.ts  package.json  vitest.config.mts
docs/: CIVORA_Architecture_Technique.md  CIVORA_Plan_Developpement.md  events.md
docs/adr/: 001-tenant-isolation-rls.md  002-auth-and-rbac.md  003-domain-events-outbox.md  004-async-jobs-bullmq.md  005-file-storage-r2.md  006-notifications-service.md  007-ai-gateway.md  008-realtime-socketio.md  009-audit-and-observability.md  010-workflow-engine.md  011-cicd-and-backups.md  012-contacts-scoring-cold-start.md  013-biens-portfolio-scoring.md
docs/revues/: lot0-revue-DoD.md  lot0-revue-securite-RLS.md  lot1-module1-contacts-revue.md
docs/scoring/: biens.md  contacts.md
docs/screenshots/: README.md
docs/user-guides/: contacts-import.md
infra/backup/: README.md  pg-backup.sh  pg-restore-test.sh
infra/docker/: Dockerfile.ai  Dockerfile.api  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
(+374 files in other folders)
